Test/roundingmodes/RMAttributeInvalid.bpl.expect
RMAttributeInvalid.bpl(4,29): error: "}" expected
RMAttributeInvalid.bpl(4,33): error: invalid Function
2 parse errors detected in RMAttributeInvalid.bpl
